--- a/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Views/Customers/New.cshtml
@@ -1,5 +1,4 @@
-﻿@model Vidly.Models.Customer
-@{
+﻿@model Vidly.ViewModels.NewCustomerViewModel
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,17 +8,21 @@
 @using (Html.BeginForm("Create", "customers"))
 {
     <div class="form-group">
-        @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m =>m.Name, new { @class = "form-control"})
+        @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m =>m.Customer.Name, new { @class = "form-control"})
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Birthday)
-        @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Birthday)
+        @Html.TextBoxFor(m => m.Customer.Birthday, new { @class = "form-control" })
     </div>
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.IsSubscribedToNewsLetter, new { @class = "checkbox" }) Subscribed to Newsletter?
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter, new { @class = "checkbox" }) Subscribed to Newsletter?
         </label>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes,"Id", "MembershipTypeName"),"Select Membership Type", new { @class = "form-control" })
     </div>
 }
 
