SAving New Customers And Edit Form

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -24,7 +24,7 @@
                     @* var customerURL = "Customers/GetCustomer/" + customer.Id;*@
                     <tr>
                         <td>
-                            @Html.ActionLink(cust.Name, "Details", "Customers", new { id = cust.Id }, null)
+                            @Html.ActionLink(cust.Name, "Edit", "Customers", new { id = cust.Id }, null)
                         </td>
                         <td>@cust.MembershipType.MembershipTypeName</td>
                         @* <a href=@customerURL>*@
