--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -9,7 +9,7 @@
 
 <h2>@Model.Name</h2>
 <ul>
-    <li>Genre - @Model.GenreType.GenreName</li>
+    <li>Genre - @Model.Genre.Name</li>
    <li>Release Date - @Model.ReleaseDate</li>
     <li>In Stock - @Model.NumberInStock</li>
     <li>Date Added - @Model.DateAdded</li>
