--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -6,26 +6,33 @@
 
 <h2>New Customer</h2>
 
-@using (Html.BeginForm("Save", "Customers"))
-{
+<form method="post" action="@(Model.Customer.Id==0?Url.Action("Add","Customers"):Url.Action("Update","Customers"))">
+    
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m =>m.Customer.Name, new { @class = "form-control"})
+        @Html.ValidationMessageFor(m=>m.Customer.Name)
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.Birthday)
-        @Html.TextBoxFor(m => m.Customer.Birthday,"{0:d MMM yyyy}", new { @class = "form-control" })
-    </div>   
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes,"Id", "MembershipTypeName"),"Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Customer.MembershipTypeId)
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.Birthday)
+        @Html.TextBoxFor(m => m.Customer.Birthday, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthday)
+    </div>   
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter, new { @class = "checkbox" }) Subscribed to Newsletter?
         </label>
     </div>
     @Html.HiddenFor(m =>m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
-}
+    @*script type="text/javascript" src="~/bundles/jqueryval" />*@
+    <script src="@Url.Content("~/bundles/jquery")" type="text/javascript"></script>
+    <script src="@Url.Content("~/bundles/jqueryval")" type="text/javascript"></script>
+</form>
 
